--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     </div>
     <!-- banner section is end -->
 
+    <!-- Action Section is start -->
+    <section class="preview-section">
+      <div class="action-container">
+        <div class="left">
+          <h3>See It in Action</h3>
+          <p>
+            Explore the live preview and imagine your brand in this bold new
+            look.
+          </p>
+          <button class="preview-btn">Launch Live Preview</button>
+        </div>
+        <div class="right">
+          <img src="assets/image 1.png" alt="Webflow Preview" />
+        </div>
+      </div>
+    </section>
 
+    <!-- Action Section is end -->
   </body>
 </html>
