productive users section is completed

--- a/index.html
+++ b/index.html
@@ -48,5 +48,26 @@
     </section>
 
     <!-- Action Section is end -->
+
+
+        <!-- Productive Users Section is start -->
+    <div class="stats-container">
+      <div class="stats-heading">Joined Thousands of Productive Users</div>
+      <div class="stats">
+        <div class="stat-box">
+          <div class="stat-number">50K</div>
+          <div class="stat-label">Active Users</div>
+        </div>
+        <div class="stat-box">
+          <div class="stat-number">2M+</div>
+          <div class="stat-label">Focus Sessions</div>
+        </div>
+        <div class="stat-box">
+          <div class="stat-number">95%</div>
+          <div class="stat-label">Satisfaction Rate</div>
+        </div>
+      </div>
+    </div>
+    <!-- Productive Users Section is end -->
   </body>
 </html>
