--- a/index.html
+++ b/index.html
@@ -69,5 +69,79 @@
       </div>
     </div>
     <!-- Productive Users Section is end -->
+
+
+        <!--  Users Feedback Section is start  -->
+    <section class="reviews-section">
+      <h2>What our users say</h2>
+      <div class="reviews">
+        <!-- Review Card 1 -->
+        <div class="review-card">
+          <div class="stars">
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+          </div>
+          <div class="review-title">Loved by Designers</div>
+          <div class="review-text">
+            This template instantly leveled up our presence.” – Studio Vertex
+          </div>
+          <div class="reviewer">
+            <img src="assets/avatar.png" alt="Reviewer" />
+            <div class="reviewer-info">
+              <strong>Reviewer name</strong>
+              Date
+            </div>
+          </div>
+        </div>
+
+        <!-- Review Card 2 -->
+        <div class="review-card">
+          <div class="stars">
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+          </div>
+          <div class="review-title">Loved by Designers</div>
+          <div class="review-text">
+            This template instantly leveled up our presence.” – Studio Vertex
+          </div>
+          <div class="reviewer">
+            <img src="assets/avatar.png" alt="Reviewer" />
+            <div class="reviewer-info">
+              <strong>Reviewer name</strong>
+              Date
+            </div>
+          </div>
+        </div>
+
+        <!-- Review Card 3 -->
+        <div class="review-card">
+          <div class="stars">
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+            <img src="assets/icon-star.png" alt="" />
+          </div>
+          <div class="review-title">Loved by Designers</div>
+          <div class="review-text">
+            This template instantly leveled up our presence.” – Studio Vertex
+          </div>
+          <div class="reviewer">
+            <img src="assets/avatar.png" alt="Reviewer" />
+            <div class="reviewer-info">
+              <strong>Reviewer name</strong>
+              Date
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  Users’ Feedback Section is end  -->
   </body>
 </html>
