ready to focus better is completed

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
     <!-- Action Section is end -->
 
-
-        <!-- Productive Users Section is start -->
+    <!-- Productive Users Section is start -->
     <div class="stats-container">
       <div class="stats-heading">Joined Thousands of Productive Users</div>
       <div class="stats">
@@ -70,8 +69,7 @@
     </div>
     <!-- Productive Users Section is end -->
 
-
-        <!--  Users Feedback Section is start  -->
+    <!--  Users Feedback Section is start  -->
     <section class="reviews-section">
       <h2>What our users say</h2>
       <div class="reviews">
@@ -143,5 +141,17 @@
       </div>
     </section>
     <!--  Users’ Feedback Section is end  -->
+
+    <!--  Ready to focus better is start -->
+    <section class="focus-section">
+      <h1>Ready to focus better</h1>
+      <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+      <a href="#" class="btn">Get Started Free</a>
+
+      <div class="image-container">
+        <img src="assets/wc-big.png" alt="Webflow Conf Image" />
+      </div>
+    </section>
+    <!--  Ready to focus better is end -->
   </body>
 </html>
