--- a/index.html
+++ b/index.html
@@ -153,5 +153,31 @@
       </div>
     </section>
     <!--  Ready to focus better is end -->
+
+      <!-- Let’s Get in Touch is start -->
+    <section class="contact-section">
+      <div class="sub-container">
+        <div class="contact-text">Let’s Get in<br />Touch</div>
+        <form class="contact-form">
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="example@email.com" />
+          </div>
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="full name" />
+          </div>
+          <div>
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              placeholder="write your message...."
+            ></textarea>
+          </div>
+          <button type="submit">Get in Touch</button>
+        </form>
+      </div>
+    </section>
+    <!-- Let’s Get in Touch is end -->
   </body>
 </html>
