--- a/index.html
+++ b/index.html
@@ -179,5 +179,24 @@
       </div>
     </section>
     <!-- Let’s Get in Touch is end -->
+
+
+    
+    <!-- footer section is start -->
+
+    <footer>
+      <div class="footer-logo">LOGO</div>
+      <p class="footer-desc">
+        Ready to elevate your online presence? Contact us today to discuss your
+        project and discover how we can bring your vision to life.
+      </p>
+      <nav class="footer-nav">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">How it Works</a>
+        <a href="#">Services</a>
+      </nav>
+    </footer>
+    <!-- footer section is end -->
   </body>
 </html>
